--- a/HiringManager.DomainServices/packages.config
+++ b/HiringManager.DomainServices/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.0.0" targetFramework="net451" />
