--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -90,7 +90,8 @@
     <Compile Include="CreatePositionResponse.cs" />
     <Compile Include="HireCandidateRequest.cs" />
     <Compile Include="CandidateStatusResponse.cs" />
-    <Compile Include="Impl\ApplicationDbContext.cs" />
+    <Compile Include="IdentityExtensions.cs" />
+    <Compile Include="Impl\CustomClaimsIdentityFactory.cs" />
     <Compile Include="Impl\DomainServiceBase.cs" />
     <Compile Include="Impl\PositionService.cs" />
     <Compile Include="Impl\UserSession.cs" />
