--- a/HiringManager.Web.Ninject/packages.config
+++ b/HiringManager.Web.Ninject/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.1" targetFramework="net40" requireReinstallation="True" />
+  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net451" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" requireReinstallation="True" />
   <package id="ninject.extensions.conventions" version="3.0.0.11" targetFramework="net40" requireReinstallation="True" />
   <package id="Simple.Validation" version="0.7.1" targetFramework="net40" />
