--- a/HiringManager.Web.UnitTests/packages.config
+++ b/HiringManager.Web.UnitTests/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
+  <package id="EntityFramework" version="6.0.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net40" />
   <package id="NSubstitute" version="1.6.1.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
 </packages>
