--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebHelpers" version="3.0.0" targetFramework="net451" />
