--- a/HiringManager.DomainServices/packages.config
+++ b/HiringManager.DomainServices/packages.config
@@ -8,4 +8,5 @@
   <package id="Microsoft.AspNet.WebPages.Data" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Simple.Validation" version="0.7.1" targetFramework="net451" />
 </packages>
