--- a/HiringManager.Web.UnitTests/packages.config
+++ b/HiringManager.Web.UnitTests/packages.config
@@ -13,4 +13,5 @@
   <package id="NSubstitute" version="1.6.1.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="Simple.Validation" version="0.7.1" targetFramework="net451" />
 </packages>
