--- a/HiringManager.DomainServices.Transactions.UnitTests/packages.config
+++ b/HiringManager.DomainServices.Transactions.UnitTests/packages.config
@@ -4,4 +4,5 @@
   <package id="NBuilder" version="3.0.1.1" targetFramework="net40" />
   <package id="NSubstitute" version="1.6.1.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="Simple.Validation" version="0.7.1" targetFramework="net451" />
 </packages>
