--- a/HiringManager.DomainServices.Transactions/packages.config
+++ b/HiringManager.DomainServices.Transactions/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Isg.Specification" version="0.1" targetFramework="net40" />
+  <package id="Simple.Validation" version="0.7.1" targetFramework="net451" />
 </packages>
