--- a/HiringManager.Mappers.UnitTests/HiringManager.Mappers.UnitTests.csproj
+++ b/HiringManager.Mappers.UnitTests/HiringManager.Mappers.UnitTests.csproj
@@ -37,11 +37,11 @@
   <ItemGroup>
     <Reference Include="AutoMapper, Version=3.1.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\AutoMapper.3.1.0\lib\net40\AutoMapper.dll</HintPath>
+      <HintPath>..\packages\AutoMapper.3.2.0\lib\net40\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="AutoMapper.Net4, Version=3.1.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+    <Reference Include="AutoMapper.Net4, Version=3.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\AutoMapper.3.1.0\lib\net40\AutoMapper.Net4.dll</HintPath>
+      <HintPath>..\packages\AutoMapper.3.2.0\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
     <Reference Include="FizzWare.NBuilder">
       <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
@@ -66,19 +66,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\CandidateStatusDetailsMapperTests.cs" />
-    <Compile Include="Domain\CreatePositionRequestMapperTests.cs" />
+    <Compile Include="Domain\CreatePositionRequestMappingTests.cs" />
     <Compile Include="Domain\PositionDetailsMapperTests.cs" />
-    <Compile Include="Domain\PositionSummaryMapperTests.cs" />
+    <Compile Include="Domain\PositionSummaryMappingTests.cs" />
     <Compile Include="Domain\QueryPositionSummariesRequestMapperTests.cs" />
     <Compile Include="Presentation\Positions\AddCandidateViewModelMapperTests.cs" />
     <Compile Include="Presentation\Positions\CandidateStatusViewModelMapperTests.cs" />
     <Compile Include="Presentation\Positions\ClosePositionViewModelMapperTests.cs" />
-    <Compile Include="Presentation\Positions\CreatePositionViewModelMapperTests.cs" />
     <Compile Include="Presentation\Positions\PositionCandidatesViewModelMapperTests.cs" />
     <Compile Include="Presentation\Positions\PositionSummaryIndexMapperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -98,6 +98,10 @@
       <Project>{D023737E-5EF9-45D1-800D-40CCFDE74661}</Project>
       <Name>HiringManager.Web.ViewModels</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HiringManager.Web\HiringManager.Web.csproj">
+      <Project>{9406BF32-1749-4A2E-9028-E4D8217F68EF}</Project>
+      <Name>HiringManager.Web</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HiringManager\HiringManager.csproj">
       <Project>{791da4a2-74bd-447b-b2a1-17b1750e2785}</Project>
       <Name>HiringManager</Name>
@@ -106,14 +110,9 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\packages\AutoMapper.3.1.0\lib\net40\AutoMapper.Net4.dll">
-      <Link>AutoMapper.Net4.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="..\packages\AutoMapper.3.2.0\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.0\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
