--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
-  <package id="AutoMapper" version="3.1.0" targetFramework="net451" />
+  <package id="AutoMapper" version="3.2.0" targetFramework="net451" />
   <package id="bootstrap" version="3.0.1" targetFramework="net451" />
   <package id="elmah" version="1.2.2" targetFramework="net451" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net451" />
@@ -12,6 +12,7 @@
   <package id="Glimpse.AspNet" version="1.5.0" targetFramework="net451" />
   <package id="Glimpse.EF6" version="1.5.0" targetFramework="net451" />
   <package id="Glimpse.Mvc5" version="1.5.0" targetFramework="net451" />
+  <package id="Isg.Specification" version="0.1" targetFramework="net451" />
   <package id="jQuery" version="2.0.3" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
