--- a/HiringManager.Mappers/HiringManager.Mappers.csproj
+++ b/HiringManager.Mappers/HiringManager.Mappers.csproj
@@ -56,8 +56,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\PositionDetailsMapper.cs" />
-    <Compile Include="Domain\QueryPositionSummariesRequestMapper.cs" />
     <Compile Include="Presentation\Positions\AddCandidateViewModelMapper.cs" />
     <Compile Include="Presentation\Positions\CandidateStatusViewModelMapper.cs" />
     <Compile Include="Presentation\Positions\ClosePositionViewModelMapper.cs" />
@@ -86,6 +84,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Domain\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
