--- a/HiringManager.Web/Web.config
+++ b/HiringManager.Web/Web.config
@@ -17,7 +17,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=HiringManagerAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="HiringManager.EntityFramework.Repository" connectionString="Data Source=.;Initial Catalog=HiringManagerDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="HiringManager.EntityFramework.HiringManagerDbContext" connectionString="Data Source=.;Initial Catalog=HiringManagerDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
