#17, openings is now a concept within the system * Create Position works with openings.

--- a/HiringManager.DomainServices.Validators/HiringManager.DomainServices.Validators.csproj
+++ b/HiringManager.DomainServices.Validators/HiringManager.DomainServices.Validators.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="AddCandidateRequestValidator.cs" />
     <Compile Include="ClosePositionValidator.cs" />
+    <Compile Include="CreatePositionValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
