--- a/HiringManager.EntityModel/HiringManager.EntityModel.csproj
+++ b/HiringManager.EntityModel/HiringManager.EntityModel.csproj
@@ -35,6 +35,13 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Isg.Specification">
       <HintPath>..\packages\Isg.Specification.0.1\lib\net40\Isg.Specification.dll</HintPath>
     </Reference>
@@ -52,11 +59,13 @@
     <Compile Include="CandidateStatus.cs" />
     <Compile Include="ContactInfo.cs" />
     <Compile Include="Manager.cs" />
+    <Compile Include="Opening.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specifications\PositionSpecification.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="DomainModel.cd" />
     <None Include="packages.config" />
   </ItemGroup>
