--- a/HiringManager.Web.Integration.Tests/App.config
+++ b/HiringManager.Web.Integration.Tests/App.config
@@ -11,6 +11,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=HiringManagerAuthIntegration;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="HiringManager.EntityFramework.HiringManagerDbContext" connectionString="Data Source=.;Initial Catalog=HiringManagerIntegrationDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -59,15 +64,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="System.Data.SqlServerCe.4.0" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
 </configuration>
